--- a/admin/billing.html
+++ b/admin/billing.html
@@ -125,7 +125,7 @@
             <div class="btn-group user-helper-dropdown">
                 <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" role="button"> keyboard_arrow_down </i>
                 <ul class="dropdown-menu slideUp">
-                    <li><a href="profile.html"><i class="material-icons">person</i>Profile</a></li>
+                    <li><a href="#"><i class="material-icons">person</i>Profile</a></li>
                     <li class="divider"></li>
                     <li><a href="sign-in.html"><i class="material-icons">input</i>Sign Out</a></li>
                 </ul>
