--- a/user/atwallet.html
+++ b/user/atwallet.html
@@ -42,7 +42,7 @@
 <div class="overlay"></div><!-- Search  -->
 <div class="search-bar">
     <div class="search-icon"> <i class="material-icons">search</i> </div>
-    <input type="text" placeholder="Explore Nexa...">
+    <input type="text" placeholder="Explore Gafista...">
     <div class="close-search"> <i class="material-icons">close</i> </div>
 </div>
 
@@ -92,44 +92,9 @@
                     <li class="footer"> <a href="javascript:void(0);">View All Notifications</a> </li>
                 </ul>
             </li>
-            <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="zmdi zmdi-flag"></i>
-                <div class="notify"><span class="heartbit"></span><span class="point"></span></div>
-                </a>
-                <ul class="dropdown-menu slideLeft">
-                    <li class="header">TASKS</li>
-                    <li class="body">
-                        <ul class="menu tasks list-unstyled">
-                            <li> <a href="javascript:void(0);">
-                                <h4> Footer display issue <small>72%</small> </h4>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 68%;"></div>
-                                </div>
-                                </a> </li>
-                            <li> <a href="javascript:void(0);">
-                                <h4> Make new buttons <small>56%</small> </h4>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="56" aria-valuemin="0" aria-valuemax="100" style="width: 68%;"></div>
-                                </div>
-                                </a> </li>
-                            <li> <a href="javascript:void(0);">
-                                <h4> Create new dashboard <small>68%</small> </h4>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100" style="width: 68%;"></div>
-                                </div>
-                                </a> </li>                            
-                            <li> <a href="javascript:void(0);">
-                                <h4> Answer GitHub questions <small>87%</small> </h4>
-                                <div class="progress">
-                                    <div class="progress-bar bg-orange" role="progressbar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100" style="width: 68%;"></div>
-                                </div>
-                                </a> </li>
-                        </ul>
-                    </li>
-                    <li class="footer"> <a href="javascript:void(0);">View All Tasks</a> </li>
-                </ul>
-            </li>
+            
             <li><a href="sign-in.html" class="mega-menu" data-close="true"><i class="zmdi zmdi-power"></i></a></li>
-            <li class=""><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a></li>
+            
         </ul>
     </div>
 </nav>
@@ -176,50 +141,7 @@
 
 
 
-<!-- Chat-launcher -->
-<div class="chat-launcher"></div>
-<div class="chat-wrapper">
-    <div class="card">
-        <div class="header">
-            <h2>TL Groups</h2>                    
-        </div>
-        <div class="body">
-            <div class="chat-widget">
-            <ul class="chat-scroll-list clearfix">
-                <li class="left float-left">
-                    <img src="assets/images/xs/avatar3.jpg" class="rounded-circle" alt="">
-                    <div class="chat-info">
-                        <a class="name" href="index2.html#">Alexander</a>
-                        <span class="datetime">6:12</span>                            
-                        <span class="message">Hello, John </span>
-                    </div>
-                </li>
-                <li class="right">
-                    <div class="chat-info"><span class="datetime">6:15</span> <span class="message">Hi, Alexander<br> How are you!</span> </div>
-                </li>
-                <li class="right">
-                    <div class="chat-info"><span class="datetime">6:16</span> <span class="message">There are many variations of passages of Lorem Ipsum available</span> </div>
-                </li>
-                <li class="left float-left"> <img src="assets/images/xs/avatar2.jpg" class="rounded-circle" alt="">
-                    <div class="chat-info"> <a class="name" href="index2.html#">Elizabeth</a> <span class="datetime">6:25</span> <span class="message">Hi, Alexander,<br> John <br> What are you doing?</span> </div>
-                </li>
-                <li class="left float-left"> <img src="assets/images/xs/avatar1.jpg" class="rounded-circle" alt="">
-                    <div class="chat-info"> <a class="name" href="index2.html#">Michael</a> <span class="datetime">6:28</span> <span class="message">I would love to join the team.</span> </div>
-                </li>
-                    <li class="right">
-                    <div class="chat-info"><span class="datetime">7:02</span> <span class="message">Hello, <br>Michael</span> </div>
-                </li>
-            </ul>
-            </div>
-            <div class="input-group">
-                <div class="form-line">
-                    <input type="text" class="form-control date" placeholder="Enter your email...">
-                </div>
-                <span class="input-group-addon"> <i class="material-icons">send</i> </span>
-            </div>
-        </div>
-    </div>
-</div>
+
 
 <section class="content">
     <div class="block-header">
@@ -364,5 +286,18 @@
       });
     </script>
 <script src="paystack/inline.js"></script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5a7201724b401e45400c8fb0/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html> 
