--- a/admin/userdashbroad.html
+++ b/admin/userdashbroad.html
@@ -189,7 +189,7 @@
             <div class="name" data-toggle="dropdown">John Doe</div>                
             <div class="btn-group user-helper-dropdown"> <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" role="button"> keyboard_arrow_down </i>
                 <ul class="dropdown-menu slideUp">
-                    <li><a href="profile.html"><i class="material-icons">person</i>Profile</a></li>
+                    <li><a href="#"><i class="material-icons">person</i>Profile</a></li>
                     <li class="divider"></li>
                     <li><a href="javascript:void(0);"><i class="material-icons">group</i>Followers</a></li>
                     <li><a href="javascript:void(0);"><i class="material-icons">shopping_cart</i>Sales</a></li>
