added bank payment verification

--- a/user/index.html
+++ b/user/index.html
@@ -123,6 +123,7 @@
                                     
                 </ul>
             </li>
+            <li><a href="userprofile.html">Verify Payments Made in Bank</a>
 
             <li><a href="javascript:void(0)">Property</a>
                 <ul class="pullDown">
