--- a/user/cuproperty.html
+++ b/user/cuproperty.html
@@ -112,8 +112,8 @@
             </li>
             <li><a href="javascript:void(0)">Wallet</a>
                 <ul class="pullDown">                                   
-                    <li><a href="uvwallet.html">View Wallet</a> </li>
-                    <li><a href="atwallet.html">Fund Wallet</a> </li>
+                    <li><a href="uvwallet.php">View Wallet</a> </li>
+                    <li><a href="atwallet.php">Fund Wallet</a> </li>
                     
                 </ul>
             </li>
@@ -124,6 +124,7 @@
                                     
                 </ul>
             </li>
+            <li><a href="userprofile.html">Verify Payments Made in Bank</a>
 
             <li><a href="javascript:void(0)">Property</a>
                 <ul class="pullDown">
