--- a/admin/wallet.html
+++ b/admin/wallet.html
@@ -186,6 +186,9 @@
                 </ul>
             </li>
 
+            <li> <a href="alltransaction.php" class="menu-toggle"><i class="zmdi zmdi-book"></i><span>All Transactions</span> </a>
+                <li> <a href="requery.php" class="menu-toggle"><i class="zmdi zmdi-refresh"></i><span>Requery Pending Transactions</span> </a>
+
 
 
 
